Fixed main middleware route ( The route was nested inside a promise chain, thus making the route invisible to other middleware functions ) | Added error handlers for 404 & Internal Server Errors

--- a/css/global.css
+++ b/css/global.css
@@ -2549,4 +2549,8 @@ input[type="button"] {
     text-align: center;
 }
 
+.err-icon {
+  text-align: center;
+}
+
 
